--- a/wawspeedaudio/manifest.json
+++ b/wawspeedaudio/manifest.json
@@ -2,7 +2,7 @@
     "manifest_version" : 2,
     "name" : "Whatsapp Web Speed Audio",
     "version" : "1.0.0",
-    "description" : "Uma alternativa para quem usa o Whatsapp Web pelo Chrome. Acelere aquele áudio longo para obter as informações mais rapidamente. Reduza a velocidade para aqueles audios que foram expressados muito rapidamente.",
+    "description" : "Acelere ou desacelere os audios do Whatsapp Web.",
     "author" : "Rafael WMS",
 
     "icons": {
